[gd_scene load_steps=7 format=3 uid="uid://ciqk70ayl26up"]

[ext_resource type="Script" path="res://game/menus/onlinemenu/ChallengePublicQueue.gd" id="1"]
[ext_resource type="Script" path="res://game/menus/training/FastSlider.gd" id="2"]
[ext_resource type="FontFile" uid="uid://d28sv0htum78d" path="res://game/assets/monogram_extended.ttf" id="6"]
[ext_resource type="Texture2D" uid="uid://biq18vleavg8w" path="res://game/assets/sprites/UI/MainMenus/WIMScreen.png" id="12"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("6")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("6")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="ChallengePublicQueue" type="Node2D"]
z_index = 1000
position = Vector2(955, 527)
scale = Vector2(0.904932, 0.904932)
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="MessageLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 290.0
offset_top = 295.0
offset_right = 540.0
offset_bottom = 368.0
grow_horizontal = 2
scale = Vector2(2.34642, 3.78326)
theme_override_fonts/font = SubResource("1")
text = "New Challenger:"

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
offset_left = 1246.0
offset_top = 355.0
offset_right = 1546.0
offset_bottom = 775.0
scale = Vector2(2, 2)

[node name="ChallengerName" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Challenger Name"

[node name="Empty" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PingLabel" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ping: ???ms"

[node name="InputDelayLabel" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("3")
text = "Input Delay: 2"

[node name="InputDelayMeter" type="HSlider" parent="CanvasLayer/GridContainer"]
layout_mode = 2
max_value = 10.0
value = 2.0
tick_count = 11
ticks_on_borders = true
script = ExtResource("2")

[node name="Empty2" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Accept" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "GO!"

[node name="Decline" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
button_mask = 0
text = "Decline"

[node name="ChallengeCount" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChallengeTimer" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Time: 10"

[node name="Background" type="Sprite2D" parent="."]
self_modulate = Color(0.0313726, 0.137255, 0.262745, 1)
position = Vector2(651.983, 209.961)
scale = Vector2(0.366962, 0.918099)
texture = ExtResource("12")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="value_changed" from="CanvasLayer/GridContainer/InputDelayMeter" to="." method="_on_InputDelayMeter_value_changed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/Accept" to="." method="_on_accept_challenge_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/Decline" to="." method="_on_decline_challenge_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
